kubelabs-files-demo/18/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: in-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: svc-web
      port:
        number: 80
  rules:
  - host: kube1.kubelabs.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-web
            port:
              number: 80
